--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: RDAP Lookup - a private domain name lookup tool - RDAP.ORG
+title: RDAP.ORG
 email: feedback@rdap.org
 description: A completely private domain name lookup tool using RDAP (the replacement for Whois)
 baseurl: "/"
